--- a/nlp with ULMfit.ipynb
+++ b/nlp with ULMfit.ipynb
@@ -6,7 +6,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.text import * "
+    "from fastai.text import * \n",
+    "from fastai import *\n",
+    "import pandas as pd\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.read_csv('data/tweets.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\": I could shed a tear, but I shouldn't wipe it away\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts['tweets'][100]"
    ]
   },
   {
