--- a/nlp with ULMfit.ipynb
+++ b/nlp with ULMfit.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\": I could shed a tear, but I shouldn't wipe it away\""
+       "': The want to hear about the impact of coronavirus – and the measures to tackle it – on people with protected charac…'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ts['tweets'][100]"
+    "ts['tweets'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>tweets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>: The want to hear about the impact of coronav...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>: :we urge judges &amp;amp; parliament of to vote ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>: I don’t think people are digesting the fact ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Pray for Nigeria, pray for the world and help ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>…</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2321</td>\n",
+       "      <td>2321</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2322</td>\n",
+       "      <td>2322</td>\n",
+       "      <td>Today, he was…</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2323</td>\n",
+       "      <td>2323</td>\n",
+       "      <td>I cant wait for my first post lockdown dickdown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2324</td>\n",
+       "      <td>2324</td>\n",
+       "      <td>: Once again, The Counterfeit News Network liv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2325</td>\n",
+       "      <td>2325</td>\n",
+       "      <td>Irony is that it is named as Corona Park</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2326 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Id                                             tweets\n",
+       "0        0  : The want to hear about the impact of coronav...\n",
+       "1        1  : :we urge judges &amp; parliament of to vote ...\n",
+       "2        2  : I don’t think people are digesting the fact ...\n",
+       "3        3  Pray for Nigeria, pray for the world and help ...\n",
+       "4        4                                                  …\n",
+       "...    ...                                                ...\n",
+       "2321  2321                                                NaN\n",
+       "2322  2322                                     Today, he was…\n",
+       "2323  2323    I cant wait for my first post lockdown dickdown\n",
+       "2324  2324  : Once again, The Counterfeit News Network liv...\n",
+       "2325  2325           Irony is that it is named as Corona Park\n",
+       "\n",
+       "[2326 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts"
    ]
   },
   {
