cleanup notebook and repo

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import json\n",
     "import seaborn as sns\n",
-    "import json"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-22</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -71,8 +71,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-23</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -80,8 +80,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-24</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -89,8 +89,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -98,8 +98,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-26</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -116,8 +116,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-03-31</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22640</td>\n",
@@ -125,8 +125,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-01</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22641</td>\n",
@@ -134,8 +134,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-02</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22642</td>\n",
@@ -143,8 +143,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-03</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22643</td>\n",
@@ -152,8 +152,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-04</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,55 +162,58 @@
       ],
       "text/plain": [
        "          Id Province_State Country_Region       Date  ConfirmedCases  \\\n",
-       "0          1            NaN    Afghanistan 2020-01-22             0.0   \n",
-       "1          2            NaN    Afghanistan 2020-01-23             0.0   \n",
-       "2          3            NaN    Afghanistan 2020-01-24             0.0   \n",
-       "3          4            NaN    Afghanistan 2020-01-25             0.0   \n",
-       "4          5            NaN    Afghanistan 2020-01-26             0.0   \n",
+       "0          1            NaN    Afghanistan 2020-01-22               0   \n",
+       "1          2            NaN    Afghanistan 2020-01-23               0   \n",
+       "2          3            NaN    Afghanistan 2020-01-24               0   \n",
+       "3          4            NaN    Afghanistan 2020-01-25               0   \n",
+       "4          5            NaN    Afghanistan 2020-01-26               0   \n",
        "...      ...            ...            ...        ...             ...   \n",
-       "22639  32705            NaN       Zimbabwe 2020-03-31             8.0   \n",
-       "22640  32706            NaN       Zimbabwe 2020-04-01             8.0   \n",
-       "22641  32707            NaN       Zimbabwe 2020-04-02             9.0   \n",
-       "22642  32708            NaN       Zimbabwe 2020-04-03             9.0   \n",
-       "22643  32709            NaN       Zimbabwe 2020-04-04             9.0   \n",
+       "22639  32705            NaN       Zimbabwe 2020-03-31               8   \n",
+       "22640  32706            NaN       Zimbabwe 2020-04-01               8   \n",
+       "22641  32707            NaN       Zimbabwe 2020-04-02               9   \n",
+       "22642  32708            NaN       Zimbabwe 2020-04-03               9   \n",
+       "22643  32709            NaN       Zimbabwe 2020-04-04               9   \n",
        "\n",
        "       Fatalities  \n",
-       "0             0.0  \n",
-       "1             0.0  \n",
-       "2             0.0  \n",
-       "3             0.0  \n",
-       "4             0.0  \n",
+       "0               0  \n",
+       "1               0  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  \n",
        "...           ...  \n",
-       "22639         1.0  \n",
-       "22640         1.0  \n",
-       "22641         1.0  \n",
-       "22642         1.0  \n",
-       "22643         1.0  \n",
+       "22639           1  \n",
+       "22640           1  \n",
+       "22641           1  \n",
+       "22642           1  \n",
+       "22643           1  \n",
        "\n",
        "[22644 rows x 6 columns]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "path = 'data/kaggle/'\n",
-    "data = pd.read_csv(path+'train.csv', \n",
+    "data = pd.read_csv(path + 'train.csv',\n",
     "                   parse_dates=['Date'],\n",
-    "                   dtype={'Id': np.int64,\n",
-    "                          'Province_State': 'category',\n",
-    "                          'Country_Region': 'category',\n",
-    "                          'ConfirmedCases':np.float64,\n",
-    "                          'Fatalities': np.float64})\n",
+    "                   dtype={\n",
+    "                       'Id': 'int',\n",
+    "                       'Province_State': 'category',\n",
+    "                       'Country_Region': 'category',\n",
+    "                       'ConfirmedCases': 'int',\n",
+    "                       'Fatalities': 'int'\n",
+    "                   })\n",
+    "data.replace([np.inf, -np.inf], np.nan)\n",
     "print(data.shape)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -228,21 +231,21 @@
      "data": {
       "text/plain": [
        "Province_State\n",
-       "Alabama     11316.0\n",
-       "Alaska       1310.0\n",
-       "Alberta      9429.0\n",
-       "Anguilla       19.0\n",
-       "Anhui       59527.0\n",
-       "             ...   \n",
-       "Wyoming      1344.0\n",
-       "Xinjiang     4435.0\n",
-       "Yukon          46.0\n",
-       "Yunnan      10979.0\n",
-       "Zhejiang    76233.0\n",
-       "Name: ConfirmedCases, Length: 130, dtype: float64"
+       "Alabama     11316\n",
+       "Alaska       1310\n",
+       "Alberta      9429\n",
+       "Anguilla       19\n",
+       "Anhui       59527\n",
+       "            ...  \n",
+       "Wyoming      1344\n",
+       "Xinjiang     4435\n",
+       "Yukon          46\n",
+       "Yunnan      10979\n",
+       "Zhejiang    76233\n",
+       "Name: ConfirmedCases, Length: 130, dtype: int64"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +352,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,37 +363,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Country_Region\n",
-       "China             4516642.0\n",
-       "US                2122889.0\n",
-       "Italy             1681364.0\n",
-       "Spain             1204247.0\n",
-       "Germany            938675.0\n",
-       "Iran               734551.0\n",
-       "France             684540.0\n",
-       "United Kingdom     310944.0\n",
-       "Korea, South       297163.0\n",
-       "Switzerland        231843.0\n",
-       "Netherlands        163044.0\n",
-       "Belgium            153548.0\n",
-       "Turkey             137445.0\n",
-       "Austria            129966.0\n",
-       "Canada              98284.0\n",
-       "Portugal            84614.0\n",
-       "Norway              72401.0\n",
-       "Brazil              71428.0\n",
-       "Sweden              67010.0\n",
-       "Israel              60914.0\n",
-       "Name: ConfirmedCases, dtype: float64"
+       "China             4516642\n",
+       "US                2122889\n",
+       "Italy             1681364\n",
+       "Spain             1204247\n",
+       "Germany            938675\n",
+       "Iran               734551\n",
+       "France             684540\n",
+       "United Kingdom     310944\n",
+       "Korea, South       297163\n",
+       "Switzerland        231843\n",
+       "Netherlands        163044\n",
+       "Belgium            153548\n",
+       "Turkey             137445\n",
+       "Austria            129966\n",
+       "Canada              98284\n",
+       "Portugal            84614\n",
+       "Norway              72401\n",
+       "Brazil              71428\n",
+       "Sweden              67010\n",
+       "Israel              60914\n",
+       "Name: ConfirmedCases, dtype: int64"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,12 +471,12 @@
     "with open('data/rho.json', 'r') as js:\n",
     "    d = json.load(js)['data']\n",
     "for js in d:\n",
-    "    dens[js['name']] = js['density'] ## /km2"
+    "    dens[js['name']] = js['density']  ## /km2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing countries are: {'Kosovo', 'West Bank and Gaza', 'Holy See', 'Diamond Princess', 'Taiwan*', 'Burma', 'Sierra Leone', 'MS Zaandam'}\n"
+      "Missing countries are: {'Kosovo', 'Sierra Leone', 'Holy See', 'West Bank and Gaza', 'Taiwan*', 'Diamond Princess', 'MS Zaandam', 'Burma'}\n"
      ]
     }
    ],
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,12 +527,17 @@
     "health_js = {}\n",
     "for i, rec in health_care.iterrows():\n",
     "    if rec['Country_Region'] in countries:\n",
-    "        health_js[rec['Country_Region']] = [rec['Health_exp_pct_GDP_2016'], rec['Physicians_per_1000_2009-18'], rec['Completeness_of_death_reg_2008-16']]\n",
+    "        health_js[rec['Country_Region']] = [\n",
+    "            rec['Health_exp_pct_GDP_2016'], rec['Physicians_per_1000_2009-18'],\n",
+    "            rec['Completeness_of_death_reg_2008-16']\n",
+    "        ]\n",
     "\n",
-    "\n",
-    "data['Health_GDP'] = data['Country_Region'].apply(lambda c: health_js[c][0] if c in health_js else float('nan'))\n",
-    "data['Physicians'] = data['Country_Region'].apply(lambda c: health_js[c][1] if c in health_js else float('nan'))\n",
-    "data['Completeness_of_death_reg'] = data['Country_Region'].apply(lambda c: health_js[c][2] if c in health_js else float('nan'))"
+    "data['Health_GDP'] = data['Country_Region'].apply(\n",
+    "    lambda c: health_js[c][0] if c in health_js else float('nan'))\n",
+    "data['Physicians'] = data['Country_Region'].apply(\n",
+    "    lambda c: health_js[c][1] if c in health_js else float('nan'))\n",
+    "data['Completeness_of_death_reg'] = data['Country_Region'].apply(\n",
+    "    lambda c: health_js[c][2] if c in health_js else float('nan'))"
    ]
   },
   {
@@ -541,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -585,15 +593,18 @@
     }
    ],
    "source": [
+    "\n",
     "for column in data:\n",
     "    print(column)\n",
-    "    print(f\"\\t\\t dtype: {data[column].dtype}, # NA's{data[column].isnull().sum()}\")\n",
+    "    print(\n",
+    "        f\"\\t\\t dtype: {data[column].dtype}, # NA's{data[column].isnull().sum()}\"\n",
+    "    )\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +771,7 @@
        "4          False                          True  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,11 +791,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_feather('data/covid19_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = data[['ConfirmedCases', 'Fatalities', 'Density', 'Health_GDP', 'Health_GDP', 'Completeness_of_death_reg']]"
    ]
   },
   {
@@ -800,6 +820,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
