check latest top 20 cases and top 20 fatalaties, (correctly this time)

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import datetime\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +63,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -71,8 +72,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -80,8 +81,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -89,8 +90,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -98,8 +99,8 @@
        "      <td>NaN</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2020-01-26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -116,8 +117,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-03-31</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22640</td>\n",
@@ -125,8 +126,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-01</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22641</td>\n",
@@ -134,8 +135,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-02</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22642</td>\n",
@@ -143,8 +144,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-03</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22643</td>\n",
@@ -152,8 +153,8 @@
        "      <td>NaN</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020-04-04</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,35 +163,35 @@
       ],
       "text/plain": [
        "          Id Province_State Country_Region       Date  ConfirmedCases  \\\n",
-       "0          1            NaN    Afghanistan 2020-01-22               0   \n",
-       "1          2            NaN    Afghanistan 2020-01-23               0   \n",
-       "2          3            NaN    Afghanistan 2020-01-24               0   \n",
-       "3          4            NaN    Afghanistan 2020-01-25               0   \n",
-       "4          5            NaN    Afghanistan 2020-01-26               0   \n",
+       "0          1            NaN    Afghanistan 2020-01-22             0.0   \n",
+       "1          2            NaN    Afghanistan 2020-01-23             0.0   \n",
+       "2          3            NaN    Afghanistan 2020-01-24             0.0   \n",
+       "3          4            NaN    Afghanistan 2020-01-25             0.0   \n",
+       "4          5            NaN    Afghanistan 2020-01-26             0.0   \n",
        "...      ...            ...            ...        ...             ...   \n",
-       "22639  32705            NaN       Zimbabwe 2020-03-31               8   \n",
-       "22640  32706            NaN       Zimbabwe 2020-04-01               8   \n",
-       "22641  32707            NaN       Zimbabwe 2020-04-02               9   \n",
-       "22642  32708            NaN       Zimbabwe 2020-04-03               9   \n",
-       "22643  32709            NaN       Zimbabwe 2020-04-04               9   \n",
+       "22639  32705            NaN       Zimbabwe 2020-03-31             8.0   \n",
+       "22640  32706            NaN       Zimbabwe 2020-04-01             8.0   \n",
+       "22641  32707            NaN       Zimbabwe 2020-04-02             9.0   \n",
+       "22642  32708            NaN       Zimbabwe 2020-04-03             9.0   \n",
+       "22643  32709            NaN       Zimbabwe 2020-04-04             9.0   \n",
        "\n",
        "       Fatalities  \n",
-       "0               0  \n",
-       "1               0  \n",
-       "2               0  \n",
-       "3               0  \n",
-       "4               0  \n",
+       "0             0.0  \n",
+       "1             0.0  \n",
+       "2             0.0  \n",
+       "3             0.0  \n",
+       "4             0.0  \n",
        "...           ...  \n",
-       "22639           1  \n",
-       "22640           1  \n",
-       "22641           1  \n",
-       "22642           1  \n",
-       "22643           1  \n",
+       "22639         1.0  \n",
+       "22640         1.0  \n",
+       "22641         1.0  \n",
+       "22642         1.0  \n",
+       "22643         1.0  \n",
        "\n",
        "[22644 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,8 +204,8 @@
     "                       'Id': 'int',\n",
     "                       'Province_State': 'category',\n",
     "                       'Country_Region': 'category',\n",
-    "                       'ConfirmedCases': 'int',\n",
-    "                       'Fatalities': 'int'\n",
+    "                       'ConfirmedCases': 'float',\n",
+    "                       'Fatalities': 'float'\n",
     "                   })\n",
     "data.replace([np.inf, -np.inf], np.nan)\n",
     "print(data.shape)\n",
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -231,21 +232,21 @@
      "data": {
       "text/plain": [
        "Province_State\n",
-       "Alabama     11316\n",
-       "Alaska       1310\n",
-       "Alberta      9429\n",
-       "Anguilla       19\n",
-       "Anhui       59527\n",
-       "            ...  \n",
-       "Wyoming      1344\n",
-       "Xinjiang     4435\n",
-       "Yukon          46\n",
-       "Yunnan      10979\n",
-       "Zhejiang    76233\n",
-       "Name: ConfirmedCases, Length: 130, dtype: int64"
+       "Alabama     11316.0\n",
+       "Alaska       1310.0\n",
+       "Alberta      9429.0\n",
+       "Anguilla       19.0\n",
+       "Anhui       59527.0\n",
+       "             ...   \n",
+       "Wyoming      1344.0\n",
+       "Xinjiang     4435.0\n",
+       "Yukon          46.0\n",
+       "Yunnan      10979.0\n",
+       "Zhejiang    76233.0\n",
+       "Name: ConfirmedCases, Length: 130, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,28 +282,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cases = data.groupby('Country_Region')['ConfirmedCases'].sum()\n",
-    "ind = np.argsort(cases)[::-1]\n",
-    "cases = cases[ind]\n",
-    "deaths = data.groupby('Country_Region')['Fatalities'].sum()"
+    "cases = data.groupby(['Country_Region', 'Date'])['ConfirmedCases'].sum()\n",
+    "cases_latest = cases.iloc[cases.index.get_level_values('Date') == datetime.datetime(2020,4, 4)]\n",
+    "ind = np.argsort(cases_latest)[::-1]\n",
+    "\n",
+    "deaths = data.groupby(['Country_Region', 'Date'])['Fatalities'].sum()\n",
+    "deaths_latest = deaths.iloc[deaths.index.get_level_values('Date') == datetime.datetime(2020,4, 4)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fatality_rate_bycountry = deaths / cases"
+    "fatality_rate_bycountry = deaths_latest / cases_latest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,47 +315,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "top_20_fatal = fatality_rate_bycountry[:20]\n",
-    "top_20_cases = cases[:20]"
+    "top_20_cases = cases_latest[:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Country_Region\n",
-       "Sudan               0.329545\n",
-       "Gambia              0.254902\n",
-       "Botswana            0.217391\n",
-       "MS Zaandam          0.181818\n",
-       "Angola              0.170732\n",
-       "Nicaragua           0.169811\n",
-       "Cabo Verde          0.162162\n",
-       "Guyana              0.155556\n",
-       "Zimbabwe            0.147727\n",
-       "Syria               0.118182\n",
-       "Italy               0.103274\n",
-       "San Marino          0.098000\n",
-       "Gabon               0.095808\n",
-       "Bangladesh          0.095299\n",
-       "Indonesia           0.086493\n",
-       "Mauritania          0.085714\n",
-       "Spain               0.080929\n",
-       "Congo (Kinshasa)    0.080136\n",
-       "Algeria             0.077397\n",
-       "Iraq                0.075781\n",
+       "Country_Region    Date      \n",
+       "Botswana          2020-04-04    0.250000\n",
+       "Gambia            2020-04-04    0.250000\n",
+       "MS Zaandam        2020-04-04    0.222222\n",
+       "Sudan             2020-04-04    0.200000\n",
+       "Angola            2020-04-04    0.200000\n",
+       "Nicaragua         2020-04-04    0.200000\n",
+       "Guyana            2020-04-04    0.173913\n",
+       "Mauritania        2020-04-04    0.166667\n",
+       "Bahamas           2020-04-04    0.142857\n",
+       "Cabo Verde        2020-04-04    0.142857\n",
+       "Syria             2020-04-04    0.125000\n",
+       "San Marino        2020-04-04    0.123552\n",
+       "Italy             2020-04-04    0.123259\n",
+       "Congo (Kinshasa)  2020-04-04    0.116883\n",
+       "Bangladesh        2020-04-04    0.114286\n",
+       "Zimbabwe          2020-04-04    0.111111\n",
+       "Algeria           2020-04-04    0.103917\n",
+       "United Kingdom    2020-04-04    0.101704\n",
+       "Liberia           2020-04-04    0.100000\n",
+       "Suriname          2020-04-04    0.100000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,37 +366,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Country_Region\n",
-       "China             4516642\n",
-       "US                2122889\n",
-       "Italy             1681364\n",
-       "Spain             1204247\n",
-       "Germany            938675\n",
-       "Iran               734551\n",
-       "France             684540\n",
-       "United Kingdom     310944\n",
-       "Korea, South       297163\n",
-       "Switzerland        231843\n",
-       "Netherlands        163044\n",
-       "Belgium            153548\n",
-       "Turkey             137445\n",
-       "Austria            129966\n",
-       "Canada              98284\n",
-       "Portugal            84614\n",
-       "Norway              72401\n",
-       "Brazil              71428\n",
-       "Sweden              67010\n",
-       "Israel              60914\n",
-       "Name: ConfirmedCases, dtype: int64"
+       "Country_Region       Date      \n",
+       "Afghanistan          2020-04-04      299.0\n",
+       "Albania              2020-04-04      333.0\n",
+       "Algeria              2020-04-04     1251.0\n",
+       "Andorra              2020-04-04      466.0\n",
+       "Angola               2020-04-04       10.0\n",
+       "Antigua and Barbuda  2020-04-04       15.0\n",
+       "Argentina            2020-04-04     1451.0\n",
+       "Armenia              2020-04-04      770.0\n",
+       "Australia            2020-04-04     5550.0\n",
+       "Austria              2020-04-04    11781.0\n",
+       "Azerbaijan           2020-04-04      521.0\n",
+       "Bahamas              2020-04-04       28.0\n",
+       "Bahrain              2020-04-04      688.0\n",
+       "Bangladesh           2020-04-04       70.0\n",
+       "Barbados             2020-04-04       52.0\n",
+       "Belarus              2020-04-04      440.0\n",
+       "Belgium              2020-04-04    18431.0\n",
+       "Belize               2020-04-04        4.0\n",
+       "Benin                2020-04-04       16.0\n",
+       "Bhutan               2020-04-04        5.0\n",
+       "Name: ConfirmedCases, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +774,7 @@
        "4          False                          True  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,18 +802,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 345,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Feature importance and analysis "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['']"
+   ]
   }
  ],
  "metadata": {
